add possibility to get number of quizzes by participant id. Do minor changes